force-app/main/default/objects/Target_Criteria__c/Target_Criteria__c.object-meta.xml
<CustomObject>
    <label>Target Criteria</label>
    <nameField>
        <label>Target Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>