force-app/main/default/objects/Target_Criteria__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>