force-app/main/default/objects/Target_Criteria__c/fields/Enable_Customer_Targets__c.field-meta.xml
<CustomField>
    <fullName>Enable_Customer_Targets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Customer Targets</label>
    <type>Checkbox</type>
</CustomField>