force-app/main/default/objects/Target_Criteria__c/fields/Prerequisite_Min_Percent__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Min_Percent__c</fullName>
    <label>Prerequisite Min Achievement (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>90</defaultValue>
    <inlineHelpText>Minimum achievement percentage required on the Prerequisite Criteria for this criteria's incentive to be eligible. Default is 90%. Example: If Prerequisite is "Revenue" and Min % is 90, the salesperson must achieve at least 90% of their Revenue target to qualify for this criteria's incentive.</inlineHelpText>
    <description>Minimum achievement % required on the prerequisite criteria. Works with Prerequisite_Criteria__c.</description>
</CustomField>