force-app/main/default/objects/Target_Criteria__c/fields/User_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Field__c</fullName>
    <label>User Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>